--- a/slides/1-intro_IB.html
+++ b/slides/1-intro_IB.html
@@ -27,16 +27,16 @@ layout: true
     &lt;span&gt;
       &lt;img src="https://upload.wikimedia.org/wikipedia/commons/c/ce/Cc-by-nc-sa_euro_icon.svg" height=14 style="vertical-align: middle"/&gt;
     &lt;/span&gt;
-      &lt;span style="padding-left:82px"&gt;
-        &lt;font color="#7E7E7E"&gt;Ivo Bantel (UZH / CIS)&lt;/font&gt;
-      &lt;/span&gt;
-      &lt;font color="#7E7E7E"&gt;
-        Collecting web data with R | March 5, 2021 | &lt;a href = "https://github.com/ibantel/2021-03-05_CEU_Webscraping-with-R"&gt;GitHub&lt;/a&gt;
-      &lt;/font&gt;
-    &lt;/span&gt;
-  &lt;/div&gt; 
+      &lt;a href = "https://github.com/ibantel/2021-03-05_CEU_Webscraping-with-R"&gt;
+        &lt;span style="padding-left:82px"&gt;
+          &lt;font color="#7E7E7E"&gt;Ivo Bantel (UZH / CIS)&lt;/font&gt;
+        &lt;/span&gt;
+        &lt;font color="#7E7E7E"&gt;Collecting web data with R | March 5, 2021&lt;/font&gt;
+      &lt;/a&gt;
+&lt;/div&gt; 
 
----
+
+???p
 
 &lt;br&gt; &lt;br&gt; &lt;br&gt;&lt;br&gt; &lt;br&gt;
 
@@ -54,7 +54,9 @@ install.packages(c("rvest", "dplyr", "stringr","knitr","rmarkdown"))
 
 ???
 
-USe this slide as screen saver; then go back one.
+Use this slide as screen saver; then go back one.
+
+
 
 ---
 
