--- a/slides/1-intro_IB.html
+++ b/slides/1-intro_IB.html
@@ -36,28 +36,6 @@ layout: true
 &lt;/div&gt; 
 
 
-???p
-
-&lt;br&gt; &lt;br&gt; &lt;br&gt;&lt;br&gt; &lt;br&gt;
-
-#While you wait...
-
-...please ensure you installed the necessary packages
-
-&lt;br&gt;
-.pull-right95[
-
-```r
-install.packages(c("rvest", "dplyr", "stringr","knitr","rmarkdown"))
-```
-]
-
-???
-
-Use this slide as screen saver; then go back one.
-
-
-
 ---
 
 
@@ -73,11 +51,13 @@ Use this slide as screen saver; then go back one.
 &lt;!--- - if you have not, **install packages!!!** ---&gt;
 .pull-left55[
 &lt;ul&gt;
-  &lt;li class="m1"&gt;Introduction:&lt;/li&gt;&lt;br&gt;
+  &lt;li class="m1"&gt;Introduction&lt;/li&gt;&lt;br&gt;
+  
+  &lt;li class="m1"&gt;Background scraping&lt;/li&gt;
   &lt;ul class="level"&gt;
-    &lt;li&gt;&lt;span&gt;scraping &amp; HTML&lt;/span&gt;&lt;/li&gt;
     &lt;li&gt;&lt;span&gt;why you should (not) scrape&lt;/span&gt;&lt;/li&gt;
-    &lt;li&gt;&lt;span&gt;legal and ethical questions&lt;/span&gt;&lt;/li&gt;
+    &lt;li&gt;&lt;span&gt;varieties of scraping&lt;/span&gt;&lt;/li&gt;
+    &lt;li&gt;&lt;span&gt;HTML&lt;/span&gt;&lt;/li&gt;
   &lt;/ul&gt;&lt;br&gt;&lt;br&gt;
 
   &lt;li class="m2"&gt;Hands-on&lt;/li&gt;
@@ -91,23 +71,35 @@ Use this slide as screen saver; then go back one.
   
 &lt;/ul&gt;
 
-&lt;!---  ADD TIME VISUALIZATION ---&gt;
+
 ]
 
 .pull-right35[
 
 &lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;
-&lt;mono&gt;install.packages(...)&lt;/mono&gt;
+&lt;!---  ADD TIME VISUALIZATION | OR: package installations ---&gt;
 
 ]
 
 ???
 
-Give overview of course
+- I will give overview of course
 
-Please turn on cameras :)
+- Please turn on cameras :)
+
+- We will have a hands-on section in the end -- you will be in smaller breakout rooms to help each other where you can
+
 
 **TO DO**: allocate times
+
+---
+class: inverse, center, middle
+
+# Introduction(s)
+
+???
+
+To get started I want to introduce myself and get to know your backgrounds a tiny little bit better
 
 ---
 
@@ -134,6 +126,8 @@ Please turn on cameras :)
 .pull-right25[
 &lt;a href='https://www.ipz.uzh.ch/en'&gt;&lt;img src="./img/uzh.png" alt="UZH logo" height='200'&gt; &lt;br&gt;
 &lt;a href='https://www.ipz.uzh.ch/en'&gt;&lt;img src="./img/digdemlab.png" alt="DigDemLab logo" height='100'&gt;
+
+&lt;!--- https://fontmeme.com/name-tags/ ---&gt;
 
 ]
 
@@ -185,7 +179,433 @@ But for now, I have some questions. Please use *Yes*, *No* etc. in Zoom.
 &lt;!--- - Is there a specific webpage you want to scrape? (Use chat) ---&gt;
 
 ---
+class: inverse, center, middle
 
+# Background scraping
+
+
+???
+
+let's get started with the content then
+
+I will first give some background for everyone to understand how we can leverage `R` to automatically collect data from the web
+
+---
+
+# Scraping &amp;mdash; and why you...
+&lt;br&gt;
+
+.pull-left45[
+### &amp;nbsp; &amp;nbsp; &amp;nbsp; ...should **not** do it
+
+&lt;br&gt; 
+#### Legal, ethical, and logistical barriers
+
+- criminal code, copyright laws etc.
+- terms of service
+- ethical regulations (privacy, GDPR, informed consent)
+- measures to prevent scraping (API restrictions, 'distributed Turing test')
+
+]
+
+--
+
+.pull-right45[
+### &amp;nbsp; &amp;nbsp; &amp;nbsp; ... should do it
+&lt;br&gt; 
+#### Data availability
+- increasing amount of public data online ('open government')
+- increasing amount of politics happens online
+- increasing amount of people use the internet
+- we share everything online
+- that makes real world phenomena more visible online 
+]
+
+???
+
+We can only touch upon the legal and ethical questions here. But be aware that you need to take this into account!
+
+---
+
+# Scraping: what is out there?
+
+--
+
+.pull-left45[
+
+&lt;br&gt;&lt;b&gt;&lt;font size=6 color = "A0A0A0"&gt;1. Scraping static pages&lt;/font&gt;&lt;/b&gt;&lt;/li&gt;
+
+]
+
+.pull-right45[
+
+  &lt;a href = "https://www.theguardian.com/international"&gt;
+    &lt;img src="./img/theguardian.png" height=400 style="vertical-align: middle"/&gt;
+  &lt;/a&gt;
+  &lt;font size=1&gt;Screenshot "The Guardian"&lt;/font&gt;
+
+]
+
+???
+
+- Scraping: extracting data from the web
+ - includes anything from university webpage to social media
+ - lots of different techniques
+
+- types of scraping
+ - structured vs. unstructured data
+ - gathering as diverse information as possible from different pages vs. very specific scrapers
+ - one-off scraping vs. regular data collection
+
+
+1. Static pages (that is what we'll cover today)
+- extracting text, links and tables from many standard webpages
+    - page written in HTML / XML
+    - page has a static URL through which you can reach it
+
+Procedure
+- 'parsing' page in R
+- extracting relevant parts
+- cleaning into usable format (e.g. data frame, raw text, ...)
+
+---
+
+# Scraping: what is out there? (2)
+
+
+.pull-left45[
+
+&lt;br&gt;&lt;b&gt;&lt;font size=6 color = "A0A0A0"&gt;1. Scraping static pages&lt;/font&gt;&lt;/b&gt;&lt;/li&gt;
+&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;font size=6 color = "A0A0A0"&gt;2. APIs &lt;font size=4&gt;(application programming interface)&lt;/font&gt;&lt;/font&gt;&lt;/li&gt;
+
+]
+
+.pull-right45[
+
+  &lt;a href = "https://www.data.gov/developers/apis"&gt;
+    &lt;img src="./img/datagovapi.png" height=400 style="vertical-align: middle"/&gt;
+  &lt;/a&gt;
+  &lt;font size=1&gt;Screenshot "DATA.GOV"&lt;/font&gt;
+
+]
+
+
+
+???
+
+2. APIs
+
+- companies and governments often provide **application programming interfaces** for their data
+    - increasing accessibility, reliability
+    - used for scraping and interaction with apps
+
+- Differences to static pages
+  - structured data in specific notation (often JSON)
+  - access through sending requests, e.g. with `httr` package
+  - in many cases: R packages for access to API, e.g. `gender`, `rtweet`, `WikipediR`, `tuber`, ...
+
+- pro: 1) legal and robust to changes in webpage structure; 2) highly standardized
+- con: 1) availability: not every page has API; 2) speed: rate limits / restrictions to amount of data; 3) may be terminated: ['post API age'](https://www.tandfonline.com/doi/full/10.1080/10584609.2018.1477506) 
+
+---
+
+# Scraping: what is out there? (3)
+
+
+.pull-left45[
+
+&lt;br&gt;&lt;b&gt;&lt;font size=6 color = "A0A0A0"&gt;1. Scraping static pages&lt;/font&gt;&lt;/b&gt;&lt;/li&gt;
+&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;font size=6 color = "A0A0A0"&gt;2. APIs &lt;font size=4&gt;(application programming interface)&lt;/font&gt;&lt;/font&gt;&lt;/li&gt;
+&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;font size=6 color = "000000"&gt;3. Dynamic pages&lt;/font&gt;&lt;/li&gt;
+
+]
+
+.pull-right45[
+
+  &lt;br&gt;&lt;br&gt;&lt;br&gt;
+    &lt;img src="./img/netflix.png" width=400 style="vertical-align: middle"/&gt;
+  &lt;br&gt;
+  &lt;font size=1&gt;Screenshot "Netflix.com"&lt;/font&gt;
+
+]
+
+
+
+???
+
+3. dynamic pages
+- for scraping pages that change while you are on them without changing their URL
+    - e.g. Netflix, Buzzfeed, (many) search functions, pages without permanent URL
+
+- Differences to static pages
+  - simulates web browsing rather than parsing static page
+  - scraping through commands to browser
+
+- pro
+    - get around many restrictions to scraping
+    - possibility to automate browsing
+- con
+    - difficult to set up
+    - less robust than static scraping
+    - legal concerns
+
+---
+
+# Scraping: what is out there? (4)
+
+
+.pull-left45[
+
+&lt;br&gt;&lt;b&gt;&lt;font size=6 color = "A0A0A0"&gt;1. Scraping static pages&lt;/font&gt;&lt;/b&gt;
+&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;font size=6 color = "A0A0A0"&gt;2. APIs &lt;font size=4&gt;(application programming interface)&lt;/font&gt;&lt;/font&gt;&lt;/li&gt;
+&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;font size=6 color = "A0A0A0"&gt;3. Dynamic pages&lt;/font&gt;
+&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;font size=6 color = "000000"&gt;4. Web crawlers / spiders&lt;/font&gt;
+
+]
+
+.pull-right45[
+
+  &lt;br&gt;
+    &lt;img src="./img/crawler.png" width=400 style="vertical-align: middle"/&gt;
+  &lt;br&gt;
+  &lt;font size=0.1&gt;&amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; Created by Symbolon from the Noun Project&lt;/font&gt;
+
+]
+
+???
+
+4. web crawling / spiders
+
+- parsing of massive amounts of data
+    - e.g. price data, building a search engine, ...
+- reading of pages as usual but parsing e.g. through `boilerpipeR`
+
+- Differences to static pages
+  - no selection of specific parts but use of *heuristics* on HTML code
+      - &amp;rarr; less exact but less labor-intensive extraction of content
+  - pro
+    - masses of data
+  - con
+    - masses of data (that are unclear)
+
+---
+class: inverse, center, middle
+
+# HTML
+
+
+???
+
+the last thing we need to quickly talk about before we can get started is HTML
+
+- refers to **H**yper **T**ext **M**arkup **L**anguage
+  - *markup*: additional description of formatting beyond the content of the text
+  
+  - let's consider an example
+---
+
+# HTML 101
+
+&lt;br&gt; 
+
+
+.pull-left45[
+
+### turning this... 
+  &lt;br&gt;
+    &lt;img src="./img/quotes2scrape_code.png" style="vertical-align: middle"/&gt;
+  &lt;br&gt;
+  &lt;font size=0.1&gt;&amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; Screenshot sourcecode [quotes.toscrape.com](http://quotes.toscrape.com/).&lt;/font&gt;
+  
+]
+
+
+--
+
+.pull-right45[
+
+### ...into this
+  &lt;br&gt;&lt;br&gt;&lt;br&gt;
+    &lt;img src="./img/quotes2scrape.png" style="vertical-align: middle"/&gt;
+  &lt;br&gt;
+  &lt;font size=0.1&gt;&amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; Screenshot [quotes.toscrape.com](http://quotes.toscrape.com/).&lt;/font&gt;
+
+]
+
+???
+HTML turns this code ...
+
+ ... into this (more or less) beautiful home page
+
+---
+
+# HTML 101
+
+--
+
+Components:
+
+&lt;br&gt;
+
+1. **HTML elements** (e.g. text)
+
+2. **HTML tags** 
+  - specify _character / behaviour_ of elements
+  - usually encompass starting and end tag (exceptions: images, line breaks etc.)
+  - surround the element they modify
+
+&lt;br&gt;
+
+Example: &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; `&lt;tagname&gt;Some content here...&lt;/tagname&gt; `
+
+
+???
+
+let's take a step back
+
+HTML consists of tags and content.
+we will focus on text because that's what we want to scrape (we could also scrape embedded images, e.g. for visual analysis etc.)
+
+---
+
+# HTML tags: basics
+
+.pull-right85[
+&lt;br&gt;&lt;br&gt;
+``` 
+&lt;html&gt; 
+    &lt;head&gt; 
+        &lt;title&gt;Title of your web page&lt;/title&gt; 
+    &lt;/head&gt; 
+    &lt;body&gt; 
+      &lt;h1&gt;Heading&lt;/h1&gt;
+      &lt;p&gt;HTML web page content&lt;/p&gt;
+    &lt;/body&gt; 
+&lt;/html&gt; 
+```
+]
+
+???
+
+- we are mostly interested in what is inside the **body**, that is, the content of a webpage
+- **head** gives meta information, often used by search engines; we tend to ignore it
+- as we see in the `&lt;h1&gt;` part, tags can be **nested**
+
+---
+
+# HTML tags: headings &amp; paragraphs
+
+&lt;ol&gt;
+&lt;li&gt;Headings (defined by numbered h tags):&lt;/li&gt;
+
+`&lt;h1&gt;my heading&lt;/h1&gt;` &amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp; &lt;font size=10&gt;my heading&lt;/font&gt;
+
+`&lt;h2&gt;a smaller heading&lt;/h2&gt;` &amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp; &lt;font size=8&gt;a smaller heading&lt;/font&gt;
+
+--
+
+&lt;br&gt;&lt;br&gt;
+&lt;li&gt;Paragraphs are defined by div or p tags&lt;/li&gt;
+
+`&lt;p&gt;this is a paragraph.&lt;/p&gt;&lt;div&gt;and this is the next.&lt;/div&gt;`
+&lt;p&gt;this is a paragraph.&lt;/p&gt;&lt;div&gt;and this is the next.&lt;/div&gt;
+
+
+---
+
+# HTML tags: attributes
+
+`&lt;tagname attribute="x"&gt; Title &lt;/tagname&gt;`
+
+&lt;br&gt;&lt;br&gt;
+
+### Links and attributes
+
+`This text contains a &lt;a href="http://theguardian.co.uk"&gt;link&lt;/a&gt;.` 
+
+This text contains a &lt;a href="http://theguardian.co.uk"&gt;link&lt;/a&gt;.
+
+
+???
+- All HTML elements can have attributes
+- Attributes provide additional information about an element
+    - they are included inside the starting tag
+    - they usually come in name and value pairs
+    
+Tags can have attributes -- the most common case of attributes are **links**
+- text or images turned into a link by surrounding `&lt;a&gt;` tag (*anchor*)
+- link address specified as href attribute (*hyperreference*)
+
+- other examples of attributes
+  - alt: descriptions, e.g. for images
+      - for users with visual impairments, when image is missing
+  - src: source file ` &lt;img src="no_smiley.jpg" alt="Image that does not exist."&gt; `
+  - style: text styling (e.g. color ` &lt;p style="color:red"&gt;This is a paragraph.&lt;/p&gt; `)
+---
+
+# HTML tags: Classes
+
+
+
+.pull-left65[
+
+### General example
+`&lt;div class="container"&gt;This is the text&lt;/div&gt; `
+
+]
+
+.pull-right25[
+
+&lt;br&gt;&lt;div class="container"&gt; This is the text&lt;/div&gt;
+
+]
+
+
+
+--
+
+
+.pull-left65[
+&lt;br&gt;&lt;br&gt;
+### Styling with Classes
+
+```
+&lt;style&gt;
+    p.error {color: red;   border: 1px solid red;} 
+&lt;/style&gt;
+
+    &lt;p class="error"&gt;Red highlight&lt;/p&gt;
+```
+]
+
+.pull-right25[
+
+&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;
+
+&lt;style&gt;
+p.error {
+  color: red; border: 1px solid red;
+} 
+&lt;/style&gt;
+&lt;p class="error"&gt;Red highlight&lt;/p&gt;
+
+]
+
+???
+
+- **Classes** are another special case of attributes that is used for formatting 
+    - specified before
+    - usage within tags
+    
+- don't worry if you don't understand everything
+  - you should understand the logic: 
+  - the stuff in the *greater than* and *less than* signs **TAGS** isn't printed but can tell us what role the text plays in the home page. 
+  - the stuff also includes **attributes** that modify how it looks
+
+---
+&lt;br&gt;
+
+Example page we will use: [quotes.toscrape.com](http://quotes.toscrape.com).
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
