--- a/slides/workshop-slides.html
+++ b/slides/workshop-slides.html
@@ -100,7 +100,7 @@ install.packages(c("rvest", "tidyverse", "knitr", "rmarkdown", "xml2"))
 ---
 
 &lt;br&gt;
-## Schedule 
+## Agenda 
 
 .pull-left[&lt;br&lt;br&gt;&lt;br&gt;&lt;img src="./img/agenda.jpg" height="300"&gt; &lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;]
 
@@ -182,30 +182,36 @@ But for now, I have some questions. Please use *Yes*, *No* etc. in Zoom.
 
 --
 
-&lt;br&gt;
+&lt;br&gt;&lt;br&gt;
 
-- How much experience do you have with R? &lt;br&gt; 
-  &amp;nbsp; &lt;img src="./img/open-mouth.png" alt="open mouth" height="20"/&gt; &amp;nbsp; None &amp;nbsp;  &amp;nbsp;  &amp;nbsp;
-  &amp;nbsp; &lt;img src="./img/no.png" alt="no" height="20"/&gt; &amp;nbsp; Some  &amp;nbsp;  &amp;nbsp;  &amp;nbsp;
-  &amp;nbsp; &lt;img src="./img/yes.png" alt="yes" height="20"/&gt; &amp;nbsp; I can write functions &amp;nbsp;  &amp;nbsp;  &amp;nbsp;
-  &amp;nbsp; &lt;img src="./img/heart.png" alt="heart" height="20"/&gt; &amp;nbsp; I'm a pro
+&lt;b&gt;&lt;font size=6&gt;How much experience do you have with R?&lt;/font&gt;&lt;/b&gt;&lt;br&gt;&lt;br&gt;
 
-
---
-
-&lt;br&gt;
-
-- Have you used `RMarkdown` notebooks before? &lt;br&gt; 
-  &amp;nbsp; &lt;img src="./img/open-mouth.png" alt="open mouth" height="20"/&gt; &amp;nbsp; Don't know what that is &amp;nbsp;  &amp;nbsp;  &amp;nbsp;
-  &amp;nbsp; &lt;img src="./img/no.png" alt="no" height="20"/&gt; &amp;nbsp; I've opened one  &amp;nbsp;  &amp;nbsp;  &amp;nbsp;
-  &amp;nbsp; &lt;img src="./img/yes.png" alt="yes" height="20"/&gt; &amp;nbsp; I've written some &amp;nbsp;  &amp;nbsp;  &amp;nbsp;
-  &amp;nbsp; &lt;img src="./img/heart.png" alt="heart" height="20"/&gt; &amp;nbsp; All the time
+&amp;nbsp; &lt;img src="./img/open-mouth.png" alt="open mouth" height="20"/&gt; &amp;nbsp; None                  &amp;nbsp;  &amp;nbsp;  &amp;nbsp;
+&amp;nbsp; &lt;img src="./img/no.png" alt="no" height="20"/&gt;                 &amp;nbsp; Some                  &amp;nbsp;  &amp;nbsp;  &amp;nbsp;
+&amp;nbsp; &lt;img src="./img/yes.png" alt="yes" height="20"/&gt;               &amp;nbsp; I can write functions &amp;nbsp;  &amp;nbsp;  &amp;nbsp;
+&amp;nbsp; &lt;img src="./img/heart.png" alt="heart" height="20"/&gt;           &amp;nbsp; I'm a pro
 
 --
 
+&lt;br&gt;&lt;br&gt;
+
+&lt;b&gt;&lt;font size=6&gt;Have you used _RMarkdown_ notebooks before?&lt;/font&gt;&lt;/b&gt;&lt;br&gt;&lt;br&gt;
+
+&amp;nbsp; &lt;img src="./img/open-mouth.png" alt="open mouth" height="20"/&gt; &amp;nbsp; Don't know what that is &amp;nbsp;  &amp;nbsp;  &amp;nbsp;
+&amp;nbsp; &lt;img src="./img/no.png" alt="no" height="20"/&gt;                 &amp;nbsp; Once  &amp;nbsp;            &amp;nbsp;  &amp;nbsp;
+&amp;nbsp; &lt;img src="./img/yes.png" alt="yes" height="20"/&gt;               &amp;nbsp; I've written some       &amp;nbsp;  &amp;nbsp;  &amp;nbsp;
+&amp;nbsp; &lt;img src="./img/heart.png" alt="heart" height="20"/&gt;           &amp;nbsp; All the time
+
+&lt;!--- - Is there a specific webpage you want to scrape? (Use chat) ---&gt;
+
+---
+
+&lt;br&gt;
+## Getting to know you
+
 &lt;br&gt;
 
-- Have you ever webscraped? &lt;br&gt;
+&lt;b&gt;&lt;font size=5&gt;Have you ever webscraped?&lt;/font&gt;&lt;/b&gt;&lt;br&gt;&lt;br&gt;
   &amp;nbsp; &lt;img src="./img/open-mouth.png" alt="open mouth" height="20"/&gt; &amp;nbsp; What _is_ that? &amp;nbsp; &amp;nbsp;
   &amp;nbsp; &lt;img src="./img/no.png" alt="no" height="20"/&gt;                 &amp;nbsp; Never           &amp;nbsp; &amp;nbsp;
   &amp;nbsp; &lt;img src="./img/yes.png" alt="yes" height="20"/&gt;               &amp;nbsp; Once            &amp;nbsp; &amp;nbsp;
@@ -216,16 +222,27 @@ But for now, I have some questions. Please use *Yes*, *No* etc. in Zoom.
 
 &lt;br&gt;
 
-- How comfortable are you with HTML? &lt;br&gt;
+&lt;b&gt;&lt;font size=5&gt;How comfortable are you with HTML?&lt;/font&gt;&lt;br&gt;&lt;br&gt;
   &amp;nbsp; &lt;img src="./img/open-mouth.png" alt="open mouth" height="20"/&gt; &amp;nbsp; HTwhat? &amp;nbsp; &amp;nbsp; &amp;nbsp;
   &amp;nbsp; &lt;img src="./img/no.png" alt="no" height="20"/&gt;                 &amp;nbsp; Heard of it    &amp;nbsp; &amp;nbsp;
   &amp;nbsp; &lt;img src="./img/yes.png" alt="yes" height="20"/&gt;               &amp;nbsp; I know basics  &amp;nbsp; &amp;nbsp;
   &amp;nbsp; &lt;img src="./img/heart.png" alt="heart" height="20"/&gt;           &amp;nbsp; I'm fluent
 
-
+--
+ 
 
 &lt;br&gt;
- 
+
+&lt;b&gt;&lt;font size=5&gt;Which aspect of the workshop are you more interested in?&lt;/font&gt;&lt;br&gt;&lt;br&gt;
+  &amp;nbsp; &lt;img src="./img/open-mouth.png" alt="open mouth" height="20"/&gt; &amp;nbsp; Get as much input as possible &amp;nbsp; &amp;nbsp; &amp;nbsp;
+  &amp;nbsp; &lt;img src="./img/heart.png" alt="heart" height="20"/&gt;           &amp;nbsp; Minimum input, I want to practise
+
+
+???
+
+- Now, the last question will allow me to emphasize a bit more what we'll do today.
+- we will still cover both aspects but then I'll try to focus a bit more on one of them.
+- don't worry either way; the slides are online, and there are also enough exercises to keep you busy for a bit after the workshop is done
 
 &lt;!--- - Is there a specific webpage you want to scrape? (Use chat) ---&gt;
 
@@ -453,7 +470,7 @@ Procedure
   &lt;br&gt;
     &lt;img src="./img/crawler.png" width=400 style="vertical-align: middle"/&gt;
   &lt;br&gt;
-  &lt;font size=0.1&gt;&amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; Created by Symbolon from the Noun Project&lt;/font&gt;
+  &lt;font size=0.01&gt;&amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; Created by Symbolon from the Noun Project&lt;/font&gt;
 
 ]
 
@@ -537,7 +554,11 @@ HTML turns this code ...
 
 --
 
-.pull-right45[&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;img src="./img/boldtext.jpg" width="400"&gt;]
+.pull-right45[&lt;br&gt;&lt;br&gt;&lt;img src="./img/boldtext.jpg" width="400"&gt;
+.pull-right75[
+&lt;p&gt;This text is &lt;b&gt;bold&lt;/b&gt;&lt;/p&gt;]
+
+]
 
 
 ???
@@ -578,11 +599,11 @@ HTML turns this code ...
 &lt;br&gt;
 
 .pull-right45[&lt;br&gt;
-Example: &lt;br&gt;&lt;br&gt;
+&amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp;Example: &lt;br&gt;
 
-&amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; `&lt;tagname&gt;` &lt;br&gt;
-&amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp;&amp;nbsp;&amp;nbsp;  &amp;nbsp;  &amp;nbsp; `Some content here...` &lt;br&gt;
-&amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; `&lt;/tagname&gt; `]
+&amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp;&amp;nbsp; &amp;nbsp; &amp;nbsp; `&lt;tagname&gt;` &lt;br&gt;
+&amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp;&amp;nbsp; &amp;nbsp;&amp;nbsp; &amp;nbsp; &amp;nbsp;&amp;nbsp;&amp;nbsp;  &amp;nbsp;  &amp;nbsp; `Some content here...` &lt;br&gt;
+&amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp; &amp;nbsp;&amp;nbsp; &amp;nbsp; &amp;nbsp; `&lt;/tagname&gt; `]
 
 ???
 
@@ -644,13 +665,14 @@ Example: &lt;br&gt;&lt;br&gt;
 &lt;br&gt;
 ## HTML tags: attributes
 
-.pull-right75[`&lt;tagname attribute="x"&gt; Some text here &lt;/tagname&gt;`]
+.pull-right75[
+`&lt;tagname attribute="x"&gt; Some text here &lt;/tagname&gt;`]
 
 &lt;br&gt;
 
 --
-&lt;br&gt;
-**Links and attributes**
+&lt;br&gt;&lt;br&gt;&lt;br&gt;
+&lt;!---**Links and attributes**---&gt;
 
 
 .pull-left45[
@@ -661,6 +683,8 @@ Example: &lt;br&gt;&lt;br&gt;
 &amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&lt;a href="http://theguardian.co.uk"&gt;Link&lt;/a&gt; to theguardian.co.uk
 ]
 
+--
+
 .pull-right55[
 
   
@@ -669,7 +693,7 @@ Example: &lt;br&gt;&lt;br&gt;
   
   
   
-  .pull-right85[&lt;br&gt;&lt;img src="./img/cat2.jpg" href="wikipedia.org/wiki/Cat" alt="Picture of my cat" width="400" align="left"&gt;]
+  .pull-right85[&lt;br&gt;&lt;img src="./img/cat.jpg" href="wikipedia.org/wiki/Cat" alt="Picture of my cat" width="400" align="left"&gt;]
   
 
 ]
@@ -725,9 +749,11 @@ Tags can have attributes -- the most common case of attributes are **links**
 
 --
 
-### Styling with Classes
+
 
 .pull-left65[&lt;br&gt;
+
+### Styling with Classes
 
 ```
 &lt;style&gt;
